force-app/main/default/objects/SECTORMASTER__x/SECTORMASTER__x.object-meta.xml
<CustomObject>
    <description>SECTORMASTERs</description>
    <externalDataSource>WCGT_Integration</externalDataSource>
    <externalName>SECTORMASTERs</externalName>
    <label>SECTORMASTER</label>
    <pluralLabel>SECTORMASTERs</pluralLabel>
</CustomObject>