force-app/main/default/objects/SECTORMASTER__x/fields/ISFLOW__c.field-meta.xml
<CustomField>
    <fullName>ISFLOW__c</fullName>
    <description>ISFLOW</description>
    <externalDeveloperName>ISFLOW</externalDeveloperName>
    <label>ISFLOW</label>
    <length>2</length>
    <type>Text</type>
</CustomField>