force-app/main/default/objects/SECTORMASTER__x/fields/SECTOR_LEADER__c.field-meta.xml
<CustomField>
    <fullName>SECTOR_LEADER__c</fullName>
    <description>SECTOR_LEADER</description>
    <externalDeveloperName>SECTOR_LEADER</externalDeveloperName>
    <label>SECTOR_LEADER</label>
    <length>8</length>
    <type>Text</type>
</CustomField>