force-app/main/default/objects/SECTORMASTER__x/fields/SECTOR_MID__c.field-meta.xml
<CustomField>
    <fullName>SECTOR_MID__c</fullName>
    <description>SECTOR_MID</description>
    <externalDeveloperName>SECTOR_MID</externalDeveloperName>
    <label>SECTOR_MID</label>
    <length>29</length>
    <type>Text</type>
</CustomField>