force-app/main/default/objects/SECTORMASTER__x/fields/SECTOR_NAME__c.field-meta.xml
<CustomField>
    <fullName>SECTOR_NAME__c</fullName>
    <description>SECTOR_NAME</description>
    <externalDeveloperName>SECTOR_NAME</externalDeveloperName>
    <label>SECTOR_NAME</label>
    <length>100</length>
    <type>Text</type>
</CustomField>